# ICNP_spec_schemas_ref_impl

./: .gitignore  README.md  icnp-terminology.md  specification.md
examples/: 01_intent_declaration.json  02_capability_disclosures.json  03_contract_proposal.json  04_contract_acceptances.json  05_execution_token.json  workflow-agent-communication.json
icnp/: README.md  capability-vocabulary.md  implementation-guide.md  intent-schema.md  specification.md  use-cases.md
icnp/examples/: agent-tool-access.json  deployment-optimization.json
icnp/schemas/: capability.schema.json  contract.schema.json  execution-token.schema.json  intent.schema.json
reference-implementation/: README.md  demo_graph_intent_flow.html  demo_ollama_5_agents.py  demo_ollama_broadcast_single_capability.py  pyproject.toml
reference-implementation/icnp/: __init__.py  ollama.py  runtime.py
schemas/: audit.schema.json  capability.schema.json  common.schema.json  contract.schema.json  envelope.schema.json  error.schema.json  execution-token.schema.json  execution.schema.json  intent.schema.json
