[project]
name = "icnp-reference-implementation"
version = "0.1.0"
description = "ICNP reference implementation demo with 5 Ollama agents."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0.0",
  "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
